minimizing test dependencies
This ensures that we don't end up enabling all rendering modules for
testing `CORE`.

--- a/Clients/PythonCatalyst/Testing/Cxx/CMakeLists.txt
+++ b/Clients/PythonCatalyst/Testing/Cxx/CMakeLists.txt
@@ -1,3 +1,8 @@
+if (NOT TARGET VTK::TestingRendering)
+  # these tests need TestingRendering right now.
+  return()
+endif()
+
 include_directories(
   ${TestDriver_SOURCE_DIR})
 
