--- a/VTKExtensions/IOCore/Testing/Cxx/CMakeLists.txt
+++ b/VTKExtensions/IOCore/Testing/Cxx/CMakeLists.txt
@@ -3,7 +3,7 @@ vtk_add_test_cxx(vtkPVVTKExtensionsIOCoreCxxTests tests
   TestPVDArraySelection.cxx
   )
 
-if (PARAVIEW_USE_MPI)
+if (PARAVIEW_USE_MPI AND TARGET VTK::IOInfovis AND TARGET VTK::TestingRendering)
   vtk_add_test_mpi(vtkPVVTKExtensionsIOCoreCxxTests tests
     TESTING_DATA NO_VALID
     TestCSVWriter.cxx
