Move vtkSMPropertyModificationUndoElement to Remoting/ServerManager.

--- a/Remoting/ServerManager/CMakeLists.txt
+++ b/Remoting/ServerManager/CMakeLists.txt
@@ -124,6 +124,7 @@ set(classes
   vtkSMPropertyHelper
   vtkSMPropertyIterator
   vtkSMPropertyLink
+  vtkSMPropertyModificationUndoElement
   vtkSMProxy
   vtkSMProxyDefinitionManager
   vtkSMProxyGroupDomain
