examples: trigger the skip regex if the example is skipped

--- a/Examples/Catalyst/CMakeLists.txt
+++ b/Examples/Catalyst/CMakeLists.txt
@@ -9,17 +9,18 @@ if (USE_CATALYST)
 
   if (NOT TARGET ParaView::PythonCatalyst)
     message(STATUS
-      "${CMAKE_PROJECT_NAME} requires ParaView to be built with Catalyst and "
-      "Python support enabled. Please rebuild ParaView (or point to a "
-      "different build of ParaView) with PARAVIEW_USE_PYTHON set to TRUE")
+      "Skipping example: ${CMAKE_PROJECT_NAME} requires ParaView to be built "
+      "with Catalyst and Python support enabled. Please rebuild ParaView (or "
+      "point to a different build of ParaView) with PARAVIEW_USE_PYTHON set "
+      "to TRUE")
     return ()
   endif()
 
   if (NOT PARAVIEW_USE_MPI)
     message(STATUS
-      "${CMAKE_PROJECT_NAME} requires ParaView to be built with MPI support "
-      "enabled. Please rebuild ParaView (or point to a different build of "
-      "ParaView) with PARAVIEW_USE_MPI set to TRUE")
+      "Skipping example: ${CMAKE_PROJECT_NAME} requires ParaView to be built "
+      "with MPI support enabled. Please rebuild ParaView (or point to a "
+      "different build of ParaView) with PARAVIEW_USE_MPI set to TRUE")
     return ()
   endif ()
 
@@ -29,8 +30,8 @@ else ()
   find_package(MPI COMPONENTS C)
   if (NOT MPI_FOUND)
     message(STATUS
-      "${CMAKE_PROJECT_NAME} requires MPI support, but none was found. "
-      "Skipping ${CMAKE_PROJECT_NAME} examples.")
+      "Skipping example: ${CMAKE_PROJECT_NAME} requires MPI support, but none "
+      "was found.")
     return ()
   endif ()
 endif ()
