Add CATALYST and CATALYST_RENDERING editions.
We now have 5 editions: CORE, RENDERING, CATALYST, CATALYST_RENDERING,
and CANONICAL.

To support this we have reworked module groups and conditions. We now
have only two groups PARAVIEW_CORE and PARAVIEW_CANONICAL. Two flags:
PARAVIEW_ENABLE_RENDERING and PARAVIEW_ENABLE_NONESSENTIAL can be used
by modules to exclude themselves from these groups by default. Now we
can support the 5 editions as follows:

CORE:
   enable PARAVIEW_CORE group

RENDERING:
   enable PARAVIEW_CORE group
   PARAVIEW_ENABLE_RENDERING=ON

CATALYST:
   enable PARAVIEW_CANONICAL group

CATALYST_RENDERING
   enable PARAVIEW_CANONICAL group
   PARAVIEW_ENABLE_RENDERING=ON

CANONICAL:
   enable PARAVIEW_CANONICAL group
   PARAVIEW_ENABLE_RENDERING=ON
   PARAVIEW_ENABLE_NONESSENTIAL=ON

When PARAVIEW_ENABLE_NONESSENTIAL is FALSE, we ensure that hdf5, netcdf,
cgns modules are rejected thus ensuring we don't build these painful
dependencies for Catalyst editions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -239,7 +239,11 @@ set_property(GLOBAL
 
 # Note that the way that this flag gets used, it only has an effect on the
 # initial configuration.
-option(PARAVIEW_PLUGINS_DEFAULT "Default state for ParaView plugins" ${PARAVIEW_BUILD_CANONICAL})
+set(_paraview_plugins_default OFF)
+if (PARAVIEW_BUILD_EDITION STREQUAL "CANONICAL")
+  set(_paraview_plugins_default ON)
+endif()
+option(PARAVIEW_PLUGINS_DEFAULT "Default state for ParaView plugins" "${_paraview_plugins_default}")
 mark_as_advanced(PARAVIEW_PLUGINS_DEFAULT)
 set(paraview_default_plugins
   AcceleratedAlgorithms
