--- a/Remoting/Views/CMakeLists.txt
+++ b/Remoting/Views/CMakeLists.txt
@@ -107,6 +107,7 @@ set(classes
   vtkPVRenderView
   vtkPVRenderViewDataDeliveryManager
   vtkPVRenderViewSettings
+  vtkPVRenderViewWithEDL
   vtkPVRepresentedArrayListSettings
   vtkPVRepresentedDataInformation
   vtkPVScalarBarActor
