make examples build with RENDERING edition.

--- a/Examples/Catalyst/CMakeLists.txt
+++ b/Examples/Catalyst/CMakeLists.txt
@@ -57,7 +57,9 @@ add_subdirectory(CxxOverlappingAMRExample)
 add_subdirectory(CxxPVSMPipelineExample)
 add_subdirectory(CxxParticlePathExample)
 add_subdirectory(CxxSOADataArrayExample)
-add_subdirectory(CxxVTKPipelineExample)
+if (TARGET ParaView::VTKExtensionsFiltersGeneral)
+  add_subdirectory(CxxVTKPipelineExample)
+endif()
 add_subdirectory(MPISubCommunicatorExample)
 add_subdirectory(PythonDolfinExample)
 #add_subdirectory(PythonFullExample)
