Functor issue fix on windows

--- a/Plugins/HyperTreeGridADR/HyperTreeGridFilters/CMakeLists.txt
+++ b/Plugins/HyperTreeGridADR/HyperTreeGridFilters/CMakeLists.txt
@@ -3,7 +3,6 @@ set(classes
   vtkAbstractArrayMeasurement
   vtkArithmeticMeanArrayMeasurement
   vtkEntropyArrayMeasurement
-  vtkFunctor
   vtkGeometricMeanArrayMeasurement
   vtkHarmonicMeanArrayMeasurement
   vtkQuantileAccumulator
@@ -11,12 +10,16 @@ set(classes
   vtkResampleToHyperTreeGrid
   vtkStandardDeviationArrayMeasurement)
 
+set(headers
+  vtkFunctor.h)
+
 set(template_classes
   vtkArithmeticAccumulator
   vtkBinsAccumulator)
 
 vtk_module_add_module(HyperTreeGridFilters
   CLASSES ${classes}
+  HEADERS ${headers}
   TEMPLATE_CLASSES ${template_classes})
 
 paraview_add_server_manager_xmls(
